--- a/source/grapher.css
+++ b/source/grapher.css
@@ -64,15 +64,20 @@
 .graph-item-output:hover path { fill: #fff; }
 
 .edge-label { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif, "PingFang SC"; font-size: 10px; }
-.edge-path { stroke: #000; stroke-width: 1px; fill: none; marker-end: url("#arrowhead-vee"); }
-#arrowhead-vee { fill: #000; }
+.edge-path { stroke: #000; stroke-width: 1px; fill: none; marker-end: url("#arrowhead"); }
+#arrowhead { fill: #000; }
 .edge-path-control-dependency { stroke-dasharray: 3, 2; }
 
-.cluster rect { stroke: #000; fill: #000; fill-opacity: 0.02; stroke-opacity: 0.06; stroke-width: 1px; }
+.edge-path-hover { pointer-events: stroke; stroke-width: 0.5em; fill: none; stroke-opacity: 0; }
+.edge-path-hover:hover + .edge-path { stroke: #e00; marker-end: url("#arrowhead-hover"); }
+.edge-path:hover { stroke: #e00; marker-end: url("#arrowhead-hover"); }
+#arrowhead-hover { fill: #e00; }
 
 .select .node.border { stroke: #e00; stroke-width: 2px; }
-.select.edge-path { stroke: #e00; stroke-width: 2px; marker-end: url("#arrowhead-vee-select"); }
-#arrowhead-vee-select { fill: #e00; }
+.select.edge-path { stroke: #e00; stroke-width: 2px; marker-end: url("#arrowhead-select"); }
+#arrowhead-select { fill: #e00; }
+
+.cluster rect { stroke: #000; fill: #000; fill-opacity: 0.02; stroke-opacity: 0.06; stroke-width: 1px; }
 
 @keyframes pulse { from { stroke-dashoffset: 100px; } to { stroke-dashoffset: 0; } }
 
@@ -80,14 +85,18 @@
 
     .edge-label { fill: #b2b2b2; }
     .edge-path { stroke: #888; }
-    #arrowhead-vee { fill: #888; }
+    #arrowhead { fill: #888; }
+
+    .edge-path-hover:hover + .edge-path { stroke: #b00; marker-end: url("#arrowhead-hover"); }
+    .edge-path:hover { stroke: #b00; marker-end: url("#arrowhead-hover"); }
+    #arrowhead-hover { fill: #b00; }
 
     .node path { stroke: #1d1d1d; }
     .node line { stroke: #1d1d1d; }
 
     .select .node.border { stroke: #b00; }
     .select.edge-path { stroke: #b00; }
-    #arrowhead-vee-select { fill: #b00 }
+    #arrowhead-select { fill: #b00 }
 
     .node-item-function path { fill: #404040; }
     .node-item-function text { fill: #dfdfdfdf; }
