Upgrade grapher.css

--- a/source/grapher.css
+++ b/source/grapher.css
@@ -63,19 +63,21 @@
 .graph-item-output:hover { cursor: pointer; }
 .graph-item-output:hover path { fill: #fff; }
 
-.edge-label { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif, "PingFang SC"; font-size: 10px; }
-.edge-path { stroke: #000; stroke-width: 1px; fill: none; marker-end: url("#arrowhead"); }
 #arrowhead { fill: #000; }
-.edge-path-control-dependency { stroke-dasharray: 3, 2; }
-
-.edge-path-hover { pointer-events: stroke; stroke-width: 0.5em; fill: none; stroke-opacity: 0; }
-.edge-path-hover:hover + .edge-path { stroke: #e00; marker-end: url("#arrowhead-hover"); }
-.edge-path:hover { stroke: #e00; marker-end: url("#arrowhead-hover"); }
 #arrowhead-hover { fill: #e00; }
+#arrowhead-select { fill: #e00; }
+
+.edge-path { stroke: #000; stroke-width: 1px; fill: none; marker-end: url("#arrowhead"); }
+.edge-path:hover { stroke: #e00; marker-end: url("#arrowhead-hover"); }
+
+.edge-path-hit-test { pointer-events: stroke; stroke-width: 0.5em; fill: none; stroke-opacity: 0; }
+.edge-path-hit-test:hover + .edge-path { stroke: #e00; marker-end: url("#arrowhead-hover"); }
 
 .select .node.border { stroke: #e00; stroke-width: 2px; }
 .select.edge-path { stroke: #e00; stroke-width: 1px; marker-end: url("#arrowhead-select"); }
-#arrowhead-select { fill: #e00; }
+
+.edge-label { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif, "PingFang SC"; font-size: 10px; }
+.edge-path-control-dependency { stroke-dasharray: 3, 2; }
 
 .cluster rect { stroke: #000; fill: #000; fill-opacity: 0.02; stroke-opacity: 0.06; stroke-width: 1px; }
 
@@ -83,20 +85,22 @@
 
 @media (prefers-color-scheme: dark) {
 
-    .edge-label { fill: #b2b2b2; }
     .edge-path { stroke: #888; }
-    #arrowhead { fill: #888; }
-
-    .edge-path-hover:hover + .edge-path { stroke: #b00; marker-end: url("#arrowhead-hover"); }
     .edge-path:hover { stroke: #b00; marker-end: url("#arrowhead-hover"); }
-    #arrowhead-hover { fill: #b00; }
+
+    .edge-path-hit-test:hover + .edge-path { stroke: #b00; marker-end: url("#arrowhead-hover"); }
 
     .node path { stroke: #1d1d1d; }
     .node line { stroke: #1d1d1d; }
 
     .select .node.border { stroke: #b00; }
     .select.edge-path { stroke: #b00; }
+
+    #arrowhead { fill: #888; }
+    #arrowhead-hover { fill: #b00; }
     #arrowhead-select { fill: #b00 }
+
+    .edge-label { fill: #b2b2b2; }
 
     .node-item-function path { fill: #404040; }
     .node-item-function text { fill: #dfdfdfdf; }
